--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-/react-demo/src/config/zoomdev.ts
-/react-demo/src/config/zoom.ts
-/sample-app-videosdk.zip
-/react-demo/src/config/devep.ts
-/purejs-demo/package-lock.json
 /react-demo/package-lock.json
-update-version.js
-export.sh
-/export
+/react-demo/node_modules
+/react-demo/build
+/react-demo/src/config/dev.ts
